--- a/index.html
+++ b/index.html
@@ -14,8 +14,20 @@
         <button type="button" class="main_header__button-right"><i class="fa fa-search fa-lg"></i></button>
     </header>
     <main>
-        
+        <section class="grid-container" id="main-gallery-view">
+            <div class="grid-item" style="background-image: url('assets/img/anillos.png');"></div>
+            <div class="grid-item" style="background-image: url('assets/img/collares.png');"></div>
+            <div class="grid-item" style="background-image: url('assets/img/diamantes.png');"></div>
+            <div class="grid-item" style="background-image: url('assets/img/anillos.png');"></div>
+            <div class="grid-item" style="background-image: url('assets/img/pendientes.png');"></div>
+            <div class="grid-item" style="background-image: url('assets/img/anillos.png');"></div>
+            <div class="grid-item" style="background-image: url('assets/img/pulsera.jpg');"></div>
+            <div class="grid-item" style="background-image: url('assets/img/anillos.png');"></div>
+            <div class="grid-item" style="background-image: url('assets/img/reloj.jpg');"></div>
+            <div class="grid-item" style="background-image: url('assets/img/collares.png');"></div>
+        </section>
     </main>
+    <script src="/data.js"></script>
     <script src="/main.js"></script>
 </body>
 </html>
