Adding side icon bar to main page

--- a/index.html
+++ b/index.html
@@ -9,23 +9,46 @@
 </head>
 <body>
     <header class="main_header">
-        <button type="button"><i class="fa fa-bars fa-lg" id="header_toggle"></i></button>
-        <button type="button"><h1 class="main_header__button-h1">Photo</h1></button>
-        <button type="button" class="main_header__button-right"><i class="fa fa-search fa-lg"></i></button>
+        <button  class="icon_button" href="#"><i class="fa fa-bars fa-lg" id="header_toggle"></i></button>
+        <button  class="icon_button" href="#"><h1 class="main_header__button-h1">Photo</h1></button>
+        <button  class="icon_button main_header__button-right" href="#"><i class="fa fa-search fa-lg"></i></button>
     </header>
     <main>
-        <section class="grid-container" id="main-gallery-view">
-            <div class="grid-item" style="background-image: url('assets/img/anillos.png');"></div>
-            <div class="grid-item" style="background-image: url('assets/img/collares.png');"></div>
-            <div class="grid-item" style="background-image: url('assets/img/diamantes.png');"></div>
-            <div class="grid-item" style="background-image: url('assets/img/anillos.png');"></div>
-            <div class="grid-item" style="background-image: url('assets/img/pendientes.png');"></div>
-            <div class="grid-item" style="background-image: url('assets/img/anillos.png');"></div>
-            <div class="grid-item" style="background-image: url('assets/img/pulsera.jpg');"></div>
-            <div class="grid-item" style="background-image: url('assets/img/anillos.png');"></div>
-            <div class="grid-item" style="background-image: url('assets/img/reloj.jpg');"></div>
-            <div class="grid-item" style="background-image: url('assets/img/collares.png');"></div>
+        <section class="main-gallery-view" id="main-gallery-view">
+            <button type="button" class="title_button"><h2 class="main_header__button-h2">05 Dec 2020</h1></button>
+            <article class="grid-container">
+                <figure class="grid-item" style="background-image: url('assets/img/anillos.png');"></figure>
+                <figure class="grid-item" style="background-image: url('assets/img/collares.png');"></figure>
+                <figure class="grid-item" style="background-image: url('assets/img/diamantes.png');"></figure>
+                <figure class="grid-item" style="background-image: url('assets/img/anillos.png');"></figure>
+                <figure class="grid-item" style="background-image: url('assets/img/pendientes.png');"></figure>
+                <figure class="grid-item" style="background-image: url('assets/img/anillos.png');"></figure>
+                <figure class="grid-item" style="background-image: url('assets/img/pulsera.jpg');"></figure>
+                <figure class="grid-item" style="background-image: url('assets/img/anillos.png');"></figure>
+                <figure class="grid-item" style="background-image: url('assets/img/reloj.jpg');"></figure>
+                <figure class="grid-item" style="background-image: url('assets/img/collares.png');"></figure>
+            </article>
+            <button type="button" class="title_button"><h2 class="main_header__button-h2">10 Dec 2020</h1></button>
+                <article class="grid-container">
+                    <figure class="grid-item" style="background-image: url('assets/img/anillos.png');"></figure>
+                    <figure class="grid-item" style="background-image: url('assets/img/collares.png');"></figure>
+                    <figure class="grid-item" style="background-image: url('assets/img/diamantes.png');"></figure>
+                    <figure class="grid-item" style="background-image: url('assets/img/anillos.png');"></figure>
+                    <figure class="grid-item" style="background-image: url('assets/img/pendientes.png');"></figure>
+                    <figure class="grid-item" style="background-image: url('assets/img/anillos.png');"></figure>
+                    <figure class="grid-item" style="background-image: url('assets/img/pulsera.jpg');"></figure>
+                    <figure class="grid-item" style="background-image: url('assets/img/anillos.png');"></figure>
+                    <figure class="grid-item" style="background-image: url('assets/img/reloj.jpg');"></figure>
+                    <figure class="grid-item" style="background-image: url('assets/img/collares.png');"></figure>
+                </article>
         </section>
+        <aside class="icon-bar">
+            <button href="#"><i class="fa fa-image fa-lg"></i></button>
+            <button href="#"><i class="fas fa-sliders-h fa-lg"></i></button>
+            <button href="#"><i class="fa fa-envelope fa-lg"></i></button>
+            <button href="#"><i class="fa fa-globe fa-lg"></i></button>
+            <button href="#"><i class="fa fa-trash fa-lg"></i></button>
+        </aside>
     </main>
     <script src="/data.js"></script>
     <script src="/main.js"></script>
