--- a/index.html
+++ b/index.html
@@ -8,46 +8,45 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <header class="main_header">
-        <button  class="icon_button" href="#"><i class="fa fa-bars fa-lg" id="header_toggle"></i></button>
-        <button  class="icon_button" href="#"><h1 class="main_header__button-h1">Photo</h1></button>
-        <button  class="icon_button main_header__button-right" href="#"><i class="fa fa-search fa-lg"></i></button>
+    <header class="header">
+        <button  class="header__button" href="#"><i class="fa fa-bars fa-lg" id="header_toggle"></i></button>
+        <button  class="header__button" href="#"><h1 class="header__button-h1">Photo</h1></button>
+        <button  class="header__button header__button-right" href="#"><i class="fa fa-search fa-lg"></i></button>
     </header>
     <main>
-        <section class="main-gallery-view" id="main-gallery-view">
-            <button type="button" class="title_button"><h2 class="main_header__button-h2">05 Dec 2020</h1></button>
-            <article class="grid-container">
-                <figure class="grid-item" style="background-image: url('assets/img/anillos.png');"></figure>
-                <figure class="grid-item" style="background-image: url('assets/img/collares.png');"></figure>
-                <figure class="grid-item" style="background-image: url('assets/img/diamantes.png');"></figure>
-                <figure class="grid-item" style="background-image: url('assets/img/anillos.png');"></figure>
-                <figure class="grid-item" style="background-image: url('assets/img/pendientes.png');"></figure>
-                <figure class="grid-item" style="background-image: url('assets/img/anillos.png');"></figure>
-                <figure class="grid-item" style="background-image: url('assets/img/pulsera.jpg');"></figure>
-                <figure class="grid-item" style="background-image: url('assets/img/anillos.png');"></figure>
-                <figure class="grid-item" style="background-image: url('assets/img/reloj.jpg');"></figure>
-                <figure class="grid-item" style="background-image: url('assets/img/collares.png');"></figure>
+        <section class="section" id="section">
+            <button type="button" class="section__button"><h2 class="header__button-h2">05 Dec 2020</h1></button>
+            <article class="section__article">
+                <figure class="section__article-figure" style="background-image: url('assets/img/anillos.png');"></figure>
+                <figure class="section__article-figure" style="background-image: url('assets/img/collares.png');"></figure>
+                <figure class="section__article-figure" style="background-image: url('assets/img/diamantes.png');"></figure>
+                <figure class="section__article-figure" style="background-image: url('assets/img/anillos.png');"></figure>
+                <figure class="section__article-figure" style="background-image: url('assets/img/pendientes.png');"></figure>
+                <figure class="section__article-figure" style="background-image: url('assets/img/anillos.png');"></figure>
+                <figure class="section__article-figure" style="background-image: url('assets/img/pulsera.jpg');"></figure>
+                <figure class="section__article-figure" style="background-image: url('assets/img/anillos.png');"></figure>
+                <figure class="section__article-figure" style="background-image: url('assets/img/reloj.jpg');"></figure>
+                <figure class="section__article-figure" style="background-image: url('assets/img/collares.png');"></figure>
             </article>
-            <button type="button" class="title_button"><h2 class="main_header__button-h2">10 Dec 2020</h1></button>
-                <article class="grid-container">
-                    <figure class="grid-item" style="background-image: url('assets/img/anillos.png');"></figure>
-                    <figure class="grid-item" style="background-image: url('assets/img/collares.png');"></figure>
-                    <figure class="grid-item" style="background-image: url('assets/img/diamantes.png');"></figure>
-                    <figure class="grid-item" style="background-image: url('assets/img/anillos.png');"></figure>
-                    <figure class="grid-item" style="background-image: url('assets/img/pendientes.png');"></figure>
-                    <figure class="grid-item" style="background-image: url('assets/img/anillos.png');"></figure>
-                    <figure class="grid-item" style="background-image: url('assets/img/pulsera.jpg');"></figure>
-                    <figure class="grid-item" style="background-image: url('assets/img/anillos.png');"></figure>
-                    <figure class="grid-item" style="background-image: url('assets/img/reloj.jpg');"></figure>
-                    <figure class="grid-item" style="background-image: url('assets/img/collares.png');"></figure>
+            <button type="button" class="section__button"><h2 class="header__button-h2">10 Dec 2020</h1></button>
+                <article class="section__article">
+                    <figure class="section__article-figure" style="background-image: url('assets/img/anillos.png');"></figure>
+                    <figure class="section__article-figure" style="background-image: url('assets/img/collares.png');"></figure>
+                    <figure class="section__article-figure" style="background-image: url('assets/img/diamantes.png');"></figure>
+                    <figure class="section__article-figure" style="background-image: url('assets/img/anillos.png');"></figure>
+                    <figure class="section__article-figure" style="background-image: url('assets/img/pendientes.png');"></figure>
+                    <figure class="section__article-figure" style="background-image: url('assets/img/anillos.png');"></figure>
+                    <figure class="section__article-figure" style="background-image: url('assets/img/pulsera.jpg');"></figure>
+                    <figure class="section__article-figure" style="background-image: url('assets/img/anillos.png');"></figure>
+                    <figure class="section__article-figure" style="background-image: url('assets/img/reloj.jpg');"></figure>
+                    <figure class="section__article-figure" style="background-image: url('assets/img/collares.png');"></figure>
                 </article>
         </section>
-        <aside class="icon-bar">
-            <button href="#"><i class="fa fa-image fa-lg"></i></button>
-            <button href="#"><i class="fas fa-sliders-h fa-lg"></i></button>
-            <button href="#"><i class="fa fa-envelope fa-lg"></i></button>
-            <button href="#"><i class="fa fa-globe fa-lg"></i></button>
-            <button href="#"><i class="fa fa-trash fa-lg"></i></button>
+        <aside class="aside">
+            <button class="aside__button" href="#"><i class="fa fa-image fa-lg"></i></button>
+            <button class="aside__button" href="#"><i class="fa fa-envelope fa-lg"></i></button>
+            <button class="aside__button" href="#"><i class="fa fa-globe fa-lg"></i></button>
+            <button class="aside__button" href="#"><i class="fa fa-trash fa-lg"></i></button>
         </aside>
     </main>
     <script src="/data.js"></script>
