media query for side bar

--- a/index.html
+++ b/index.html
@@ -42,14 +42,15 @@
                     <figure class="section__article-figure" style="background-image: url('assets/img/collares.png');"></figure>
                 </article>
         </section>
-        <aside class="aside">
+        <aside class="aside hidden" id="aside">
             <button class="aside__button" href="#"><i class="fa fa-image fa-lg"></i></button>
             <button class="aside__button" href="#"><i class="fa fa-envelope fa-lg"></i></button>
             <button class="aside__button" href="#"><i class="fa fa-globe fa-lg"></i></button>
             <button class="aside__button" href="#"><i class="fa fa-trash fa-lg"></i></button>
         </aside>
     </main>
-    <script src="/data.js"></script>
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
+    <script src="js/data.js"></script>
+    <script src="js/aside.js"></script>
 </body>
 </html>
