opening side bar

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <button  class="header__button" href="#"><i class="fa fa-bars fa-lg" id="header_toggle"></i></button>
         <button  class="header__button" href="#"><h1 class="header__button-h1">Photo</h1></button>
         <button  class="header__button header__button-right" href="#"><i class="fa fa-search fa-lg"></i></button>
+        <!-- <form class="header__button-right" action="">
+            <input class="header__form-input" type="text" placeholder="Search.." name="search">
+            <button  class="header__button" type="submit"><i class="fa fa-search fa-lg"></i></button>
+        </form> -->
     </header>
     <main>
         <section class="section" id="section">
