open side bar function

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <button  class="header__button" href="#"><i class="fa fa-bars fa-lg" id="header_toggle"></i></button>
+        <button  class="header__button"  id="header_toggle" href="#"><i class="fa fa-bars fa-lg""></i></button>
         <button  class="header__button" href="#"><h1 class="header__button-h1">Photo</h1></button>
         <button  class="header__button header__button-right" href="#"><i class="fa fa-search fa-lg"></i></button>
         <!-- <form class="header__button-right" action="">
@@ -22,7 +22,7 @@
             <button type="button" class="section__button"><h2 class="header__button-h2">05 Dec 2020</h1></button>
             <article class="section__article">
                 <figure class="section__article-figure" style="background-image: url('assets/img/anillos.png');"></figure>
-                <figure class="section__article-figure" style="background-image: url('assets/img/collares.png');"></figure>
+                <!-- <figure class="section__article-figure" style="background-image: url('assets/img/collares.png');"></figure> -->
                 <figure class="section__article-figure" style="background-image: url('assets/img/diamantes.png');"></figure>
                 <figure class="section__article-figure" style="background-image: url('assets/img/anillos.png');"></figure>
                 <figure class="section__article-figure" style="background-image: url('assets/img/pendientes.png');"></figure>
