--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header class="header">
-        <button  class="header__button"  id="header_toggle" href="#"><i class="fa fa-bars fa-lg""></i></button>
-        <button  class="header__button" href="#"><h1 class="header__button-h1">Photo</h1></button>
+        <button  class="header__button" id="header_toggle" href="#"><i class="fa fa-bars fa-lg"></i></button>
+        <button  class="header__button title" id="title" href="#"><h1 class="header__button-h1">Photo</h1></button>
         <button  class="header__button header__button-right" href="#"><i class="fa fa-search fa-lg"></i></button>
         <!-- <form class="header__button-right" action="">
             <input class="header__form-input" type="text" placeholder="Search.." name="search">
@@ -56,5 +56,6 @@
     <script src="main.js"></script>
     <script src="js/data.js"></script>
     <script src="js/aside.js"></script>
+    <script src="js/header.js"></script>
 </body>
 </html>
