--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <header class="header">
-        <button  class="header__button" id="header_toggle" href="#"><i class="fa fa-bars fa-lg"></i></button>
-        <button  class="header__button title" id="title" href="#"><h1 class="header__button-h1">Photo</h1></button>
-        <button  class="header__button header__button-right" href="#"><i class="fa fa-search fa-lg"></i></button>
-        <!-- <form class="header__button-right" action="">
+    <header class="header" id="header">
+        <button class="header__button" id="header_toggle" href="#"><i class="fa fa-bars fa-lg"></i></button>
+        <button  class="header__button title" id="title" href="#"><h1 class="header__button-h1">Photo Gallery</h1></button>
+        <article class="header__article" id="headerRight">
+            <button  class="header__button " href="#"><i class="fa fa-search fa-lg"></i></button>
+        </article>
+        <!-- <form class="" action="">
             <input class="header__form-input" type="text" placeholder="Search.." name="search">
             <button  class="header__button" type="submit"><i class="fa fa-search fa-lg"></i></button>
         </form> -->
@@ -54,8 +56,9 @@
         </aside>
     </main>
     <script src="main.js"></script>
+    <!-- <script src="js/utilites.js"></script> -->
     <script src="js/data.js"></script>
+    <!-- <script src="js/header.js"></script> -->
     <script src="js/aside.js"></script>
-    <script src="js/header.js"></script>
 </body>
 </html>
