--- a/index.html
+++ b/index.html
@@ -9,15 +9,11 @@
 </head>
 <body>
     <header class="header" id="header">
-        <button class="header__button" id="header_toggle" href="#"><i class="fa fa-bars fa-lg"></i></button>
+        <button class="header__button" id="headerToggle" href="#"><i class="fa fa-bars fa-lg"></i></button>
         <button  class="header__button title" id="title" href="#"><h1 class="header__button-h1">Photo Gallery</h1></button>
         <article class="header__article" id="headerRight">
-            <button  class="header__button " href="#"><i class="fa fa-search fa-lg"></i></button>
+            <button  class="header__button " href="#"><i class="fa fa-search"></i></button>
         </article>
-        <!-- <form class="" action="">
-            <input class="header__form-input" type="text" placeholder="Search.." name="search">
-            <button  class="header__button" type="submit"><i class="fa fa-search fa-lg"></i></button>
-        </form> -->
     </header>
     <main>
         <section class="section" id="section">
@@ -58,7 +54,7 @@
     <script src="main.js"></script>
     <!-- <script src="js/utilites.js"></script> -->
     <script src="js/data.js"></script>
-    <!-- <script src="js/header.js"></script> -->
+    <script src="js/header.js"></script>
     <script src="js/aside.js"></script>
 </body>
 </html>
