Adding sign in and sign up buttons

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <button  class="header__button title" id="title" href="#"><h1 class="header__button-h1">Photo Gallery</h1></button>
         <article class="header__article" id="headerRight">
             <button  class="header__button " href="#"><i class="fa fa-search"></i></button>
+            <button  class="header__button-user hidden" href="#"><h3 class="header__button-h3">Sign In</h3></button>
+            <button  class="header__button-user hidden" href="#"><h3 class="header__button-h3">Sign Up</h3></button>
         </article>
     </header>
     <main>
