--- a/index.html
+++ b/index.html
@@ -14,10 +14,17 @@
         <article class="header__article" id="headerRight">
             <button  class="header__button " href="#"><i class="fa fa-search"></i></button>
             <button  class="header__button-user hidden" href="#"><h3 class="header__button-h3">Sign In</h3></button>
-            <button  class="header__button-user hidden" href="#"><h3 class="header__button-h3">Sign Up</h3></button>
+            <button  class="header__button-user hidden" id="signUp"><h3 class="header__button-h3">Sign Up</h3></button>
         </article>
     </header>
     <main>
+        <aside class="aside hidden" id="aside">
+            <button class="aside__button" href="#"><i class="fa fa-image fa-lg"></i></button>
+            <button class="aside__button" href="#"><i class="fa fa-envelope fa-lg"></i></button>
+            <button class="aside__button" href="#"><i class="fa fa-globe fa-lg"></i></button>
+            <button class="aside__button" href="#"><i class="fa fa-trash fa-lg"></i></button>
+        </aside>
+        <aside class="modal" id="modal"></aside>
         <section class="section" id="section">
             <button type="button" class="section__button"><h2 class="header__button-h2">05 Dec 2020</h1></button>
             <article class="section__article">
@@ -46,17 +53,12 @@
                     <figure class="section__article-figure" style="background-image: url('assets/img/collares.png');"></figure>
                 </article>
         </section>
-        <aside class="aside hidden" id="aside">
-            <button class="aside__button" href="#"><i class="fa fa-image fa-lg"></i></button>
-            <button class="aside__button" href="#"><i class="fa fa-envelope fa-lg"></i></button>
-            <button class="aside__button" href="#"><i class="fa fa-globe fa-lg"></i></button>
-            <button class="aside__button" href="#"><i class="fa fa-trash fa-lg"></i></button>
-        </aside>
     </main>
     <script src="main.js"></script>
     <!-- <script src="js/utilites.js"></script> -->
     <script src="js/data.js"></script>
     <script src="js/header.js"></script>
     <script src="js/aside.js"></script>
+    <script src="js/signUp.js"></script>
 </body>
 </html>
