--- a/index.html
+++ b/index.html
@@ -12,12 +12,35 @@
         <button class="header__button" id="headerToggle" href="#"><i class="fa fa-bars fa-lg"></i></button>
         <button  class="header__button title" id="title" href="#"><h1 class="header__button-h1">Photo Gallery</h1></button>
         <article class="header__article" id="headerRight">
-            <button  class="header__button " href="#"><i class="fa fa-search"></i></button>
-            <button  class="header__button-user hidden" href="#"><h3 class="header__button-h3">Sign In</h3></button>
+            <form class="" action="">
+                <input class="header__form-input hidden" type="text" placeholder="Search.." name="search">
+                <button  class="header__button" type="submit"><i class="fa fa-search"></i></button>
+            </form>
+            <!-- <button  class="header__button " href="#"><i class="fa fa-search"></i></button> -->
+            <button  class="header__button-user hidden" id="signIn" href="#"><h3 class="header__button-h3">Sign In</h3></button>
             <button  class="header__button-user hidden" id="signUp"><h3 class="header__button-h3">Sign Up</h3></button>
         </article>
     </header>
-    <aside class="modal" id="modal"></aside>
+    <aside class="modal hidden" id="modal">
+        <form class="modal__form">
+            <div class="modal__form-div">
+                <h2 class="modal__form-div-h2">Sign Up</h2>
+                <hr>
+                <label class="modal__form-div-label" for="email"><b>Email</b></label>
+                <input class="modal__form-div-input" type="text" placeholder="Enter Email" name="email" required>
+
+                <label class="modal__form-div-label" for="psw"><b>Password</b></label>
+                <input class="modal__form-div-input" type="password" placeholder="Enter Password" name="psw" required>
+
+                <label class="modal__form-div-label" for="psw-repeat"><b>Repeat Password</b></label>
+                <input class="modal__form-div-input" type="password" placeholder="Repeat Password" name="psw-repeat" required>
+                <div class="clearfix">
+                <button type="button" class="btn cancelbtn" id="cancelbtn">Cancel</button>
+                <button type="submit" class="btn signupbtn" id="signupbtn">Sign Up</button>
+                </div>
+            </div>
+        </form>
+    </aside>
     <main>
         <aside class="aside hidden" id="aside">
             <button class="aside__button" href="#"><i class="fa fa-image fa-lg"></i></button>
@@ -55,7 +78,6 @@
         </section>
     </main>
     <script src="main.js"></script>
-    <!-- <script src="js/utilites.js"></script> -->
     <script src="js/data.js"></script>
     <script src="js/header.js"></script>
     <script src="js/aside.js"></script>
