--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h2 class="modal__form-div-h2">Log In</h2>
                 <hr>
                 <label class="modal__form-div-label" for="username"><b>Username</b></label>
-                <input class="modal__form-div-input" type="text" placeholder="Enter Username" id="username" pattern="^\S{5,12}$" title="Invalid username" required>
+                <input class="modal__form-div-input" type="text" placeholder="Enter Username" id="username" pattern="[a-z]{5,15}" title="Invalid username" required>
                 <label class="modal__form-div-label" for="psw"><b>Password</b></label>
                 <input class="modal__form-div-input" type="password" placeholder="Enter Password" id="password" required>
                 <div class="clearfix">
