--- a/index.html
+++ b/index.html
@@ -45,29 +45,17 @@
         <section class="section" id="section">
             <button type="button" class="section__button"><h2 class="header__button-h2">05 Dec 2020</h1></button>
             <article class="section__article">
-                <figure class="section__article-figure" style="background-image: url('assets/img/anillos.png');"></figure>
-                <figure class="section__article-figure" style="background-image: url('assets/img/diamantes.png');"></figure>
-                <figure class="section__article-figure" style="background-image: url('assets/img/anillos.png');"></figure>
-                <figure class="section__article-figure" style="background-image: url('assets/img/pendientes.png');"></figure>
-                <figure class="section__article-figure" style="background-image: url('assets/img/anillos.png');"></figure>
-                <figure class="section__article-figure" style="background-image: url('assets/img/pulsera.jpg');"></figure>
-                <figure class="section__article-figure" style="background-image: url('assets/img/anillos.png');"></figure>
-                <figure class="section__article-figure" style="background-image: url('assets/img/reloj.jpg');"></figure>
-                <figure class="section__article-figure" style="background-image: url('assets/img/collares.png');"></figure>
+                <figure class="section__article-figure" style="background-image: url('assets/img/new-york-09.jpg');"></figure>
+                <figure class="section__article-figure" style="background-image: url('assets/img/new-york-01.jpg');"></figure>
+                <figure class="section__article-figure" style="background-image: url('assets/img/new-york-11.jpg');"></figure>
+                <figure class="section__article-figure" style="background-image: url('assets/img/new-york-02.jpg');"></figure>
+                <figure class="section__article-figure" style="background-image: url('assets/img/new-york-05.jpg');"></figure>
+                <figure class="section__article-figure" style="background-image: url('assets/img/new-york-04.jpg');"></figure>
+                <figure class="section__article-figure" style="background-image: url('assets/img/new-york-03.jpg');"></figure>
+                <figure class="section__article-figure" style="background-image: url('assets/img/new-york-06.jpg');"></figure>
+                <figure class="section__article-figure" style="background-image: url('assets/img/new-york-07.jpg');"></figure>
+                <figure class="section__article-figure" style="background-image: url('assets/img/new-york-08.jpg');"></figure>
             </article>
-            <button type="button" class="section__button"><h2 class="header__button-h2">10 Dec 2020</h1></button>
-                <article class="section__article">
-                    <figure class="section__article-figure" style="background-image: url('assets/img/anillos.png');"></figure>
-                    <figure class="section__article-figure" style="background-image: url('assets/img/collares.png');"></figure>
-                    <figure class="section__article-figure" style="background-image: url('assets/img/diamantes.png');"></figure>
-                    <figure class="section__article-figure" style="background-image: url('assets/img/anillos.png');"></figure>
-                    <figure class="section__article-figure" style="background-image: url('assets/img/pendientes.png');"></figure>
-                    <figure class="section__article-figure" style="background-image: url('assets/img/anillos.png');"></figure>
-                    <figure class="section__article-figure" style="background-image: url('assets/img/pulsera.jpg');"></figure>
-                    <figure class="section__article-figure" style="background-image: url('assets/img/anillos.png');"></figure>
-                    <figure class="section__article-figure" style="background-image: url('assets/img/reloj.jpg');"></figure>
-                    <figure class="section__article-figure" style="background-image: url('assets/img/collares.png');"></figure>
-                </article>
         </section>
     </main>
     <script src="main.js"></script>
