inserting photos dynamically

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <button class="aside__button" href="#"><i class="fa fa-trash fa-lg"></i></button>
         </aside>
         <section class="section" id="section">
-            <button type="button" class="section__button"><h2 class="header__button-h2">05 Dec 2020</h1></button>
+            <!-- <button type="button" class="section__button"><h2 class="header__button-h2">05 Dec 2020</h1></button>
             <article class="section__article">
                 <figure class="section__article-figure" style="background-image: url('assets/img/new-york-09.jpg');"></figure>
                 <figure class="section__article-figure" style="background-image: url('assets/img/new-york-01.jpg');"></figure>
@@ -61,7 +61,7 @@
                 <figure class="section__article-figure" style="background-image: url('assets/img/new-york-06.jpg');"></figure>
                 <figure class="section__article-figure" style="background-image: url('assets/img/new-york-07.jpg');"></figure>
                 <figure class="section__article-figure" style="background-image: url('assets/img/new-york-08.jpg');"></figure>
-            </article>
+            </article> -->
         </section>
     </main>
     <script src="main.js"></script>
