add users to users object

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </article>
     </header>
     <aside class="modal hidden" id="modal">
-        <form class="modal__form">
+        <form class="modal__form" id="form">
             <div class="modal__form-div">
                 <h2 class="modal__form-div-h2">Log In</h2>
                 <hr>
@@ -48,21 +48,7 @@
             <button class="aside__button" href="#"><i class="fa fa-globe fa-lg"></i></button>
             <button class="aside__button" href="#"><i class="fa fa-trash fa-lg"></i></button>
         </aside>
-        <section class="section" id="section">
-            <!-- <button type="button" class="section__button"><h2 class="header__button-h2">05 Dec 2020</h1></button>
-            <article class="section__article">
-                <figure class="section__article-figure" style="background-image: url('assets/img/new-york-09.jpg');"></figure>
-                <figure class="section__article-figure" style="background-image: url('assets/img/new-york-01.jpg');"></figure>
-                <figure class="section__article-figure" style="background-image: url('assets/img/new-york-11.jpg');"></figure>
-                <figure class="section__article-figure" style="background-image: url('assets/img/new-york-02.jpg');"></figure>
-                <figure class="section__article-figure" style="background-image: url('assets/img/new-york-05.jpg');"></figure>
-                <figure class="section__article-figure" style="background-image: url('assets/img/new-york-04.jpg');"></figure>
-                <figure class="section__article-figure" style="background-image: url('assets/img/new-york-03.jpg');"></figure>
-                <figure class="section__article-figure" style="background-image: url('assets/img/new-york-06.jpg');"></figure>
-                <figure class="section__article-figure" style="background-image: url('assets/img/new-york-07.jpg');"></figure>
-                <figure class="section__article-figure" style="background-image: url('assets/img/new-york-08.jpg');"></figure>
-            </article> -->
-        </section>
+        <section class="section" id="section"></section>
     </main>
     <script src="main.js"></script>
     <script src="js/data.js"></script>
