--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
         <button class="header__button" id="headerToggle" href="#"><i class="fa fa-bars fa-lg"></i></button>
         <button  class="header__button title" id="title" href="#"><h1 class="header__button-h1">Photo Gallery</h1></button>
         <article class="header__article" id="headerRight">
-            <form class="" action="">
-                <input class="header__form-input hidden" type="text" placeholder="Search.." name="search">
-                <button  class="header__button" type="submit"><i class="fa fa-search"></i></button>
+            <form class="header__form" action="">
+                <input class="header__form-input hidden" type="text" placeholder="Search.." name="search" id="inputSearch">
+                <button class="header__button" id="search" type="submit"><i class="fa fa-search"></i></button>
             </form>
             <button  class="header__button-user hidden" id="logIn" href="#"><h3 class="header__button-h3">Log In</h3></button>
+            <button  class="header__button hidden" id="currantUser" href="#"><h3 class="header__button-h3"></h3></button>
+            <button  class="header__button-user hidden" id="logOut" href="#"><h3 class="header__button-h3">Log Out</h3></button>
         </article>
     </header>
     <aside class="modal hidden" id="modal">
@@ -33,6 +35,7 @@
                     <label class="modal__form-div-label" for="psw"><b>Password</b></label>
                     <input class="modal__form-div-input" type="password" placeholder="Enter Password" id="password" pattern="[A-Za-z0-9!?-]{8,12}" required>
                     <button class="invalid-input hidden" id="invalidPassword">Password should contain 8 to 12 uppercase or lowercase letters, numbers and characters !?-</span>
+                    <button class="invalid-input hidden" id="invalidLoginPassword">Please enter correct password</span>
                 </div>
                 <div class="clearfix">
                     <button type="button" class="btn cancelbtn" id="cancelbtn">Cancel</button>
@@ -52,8 +55,9 @@
     </main>
     <script src="main.js"></script>
     <script src="js/data.js"></script>
-    <script src="js/header.js"></script>
+    <script src="js/search.js"></script>
     <script src="js/aside.js"></script>
     <script src="js/logIn.js"></script>
+    <script src="js/logOut.js"></script>
 </body>
 </html>
