--- a/index.html
+++ b/index.html
@@ -46,10 +46,18 @@
     </aside>
     <main>
         <aside class="aside hidden" id="aside">
-            <button class="aside__button" href="#"><i class="fa fa-image fa-lg"></i></button>
-            <button class="aside__button" href="#"><i class="fa fa-envelope fa-lg"></i></button>
-            <button class="aside__button" href="#"><i class="fa fa-globe fa-lg"></i></button>
-            <button class="aside__button" href="#"><i class="fa fa-trash fa-lg"></i></button>
+            <div class="aside__div">
+                <button class="aside__button" href="#"><i class="fa fa-image fa-lg"></i></button>
+                <button class="header__button hidden" id="photo"><h1 class="aside__div-button-h1">Photo</h1></button>
+                </div>
+                <div class="aside__div">
+                <button class="aside__button" href="#"><i class="fa fa-film fa-lg"></i></button>
+                <button class="header__button hidden" id="presentation"><h1 class="aside__div-button-h1">Presentation</h1></button>
+            </div>
+            <div class="aside__div">
+                <button class="aside__button" href="#"><i class="fa fa-trash fa-lg"></i></button>
+                <button class="header__button hidden" id="trash"><h1 class="aside__div-button-h1">Trash</h1></button>
+            </div>
         </aside>
         <section class="section" id="section"></section>
     </main>
