--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </form>
     </aside>
     <main>
-        <aside class="aside hidden" id="aside">
+        <aside class="aside" id="aside">
             <div class="aside__div">
                 <button class="aside__button" href="#"><i class="fa fa-image fa-lg"></i></button>
                 <button class="header__button hidden" id="photo"><h1 class="aside__div-button-h1">Photo</h1></button>
@@ -58,6 +58,11 @@
                 <button class="aside__button" href="#"><i class="fa fa-trash fa-lg"></i></button>
                 <button class="header__button hidden" id="trash"><h1 class="aside__div-button-h1">Trash</h1></button>
             </div>
+            <div class="aside__div" id="asideDiv">
+                <button class="aside__button" href="#"><i class="fa fa-user-circle fa-lg"></i></button>
+                <button class="header__button hidden" id="asideLogIn"><h1 class="aside__div-button-h1">Log In</h1></button>
+            </div>
+
         </aside>
         <section class="section" id="section"></section>
     </main>
