--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <button class="header__button" id="search" type="submit"><i class="fa fa-search"></i></button>
             </form>
             <button  class="header__button-user hidden" id="logIn" href="#"><h3 class="header__button-h3">Log In</h3></button>
-            <button  class="header__button hidden" id="currantUser" href="#"><h3 class="header__button-h3"></h3></button>
-            <button  class="header__button-user hidden" id="logOut" href="#"><h3 class="header__button-h3">Log Out</h3></button>
+            <button  class="header__button hidden" id="currantUser" href="#"></button>
+            <button  class="header__button hidden" id="logOut" href="#"><i class="fa fa-sign-out fa-lg"></i></button>
         </article>
     </header>
     <aside class="modal hidden" id="modal">
@@ -58,11 +58,14 @@
                 <button class="aside__button" href="#"><i class="fa fa-trash fa-lg"></i></button>
                 <button class="header__button hidden" id="trash"><h1 class="aside__div-button-h1">Trash</h1></button>
             </div>
-            <div class="aside__div" id="asideDiv">
+            <div class="aside__div" id="asideDivLogIn">
                 <button class="aside__button" href="#"><i class="fa fa-user-circle fa-lg"></i></button>
                 <button class="header__button hidden" id="asideLogIn"><h1 class="aside__div-button-h1">Log In</h1></button>
             </div>
-
+            <div class="aside__div" id="asideDivLogOut">
+                <button class="aside__button" href="#"><i class="fa fa-sign-out fa-lg"></i></button>
+                <button class="header__button hidden" id="asideLogOut"><h1 class="aside__div-button-h1">Log Out</h1></button>
+            </div>
         </aside>
         <section class="section" id="section"></section>
     </main>
