--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </aside>
     <main>
         <aside class="aside" id="aside">
-            <div class="aside__div">
+            <div class="aside__div" id="photoDiv">
                 <button class="aside__button" href="#"><i class="fa fa-image fa-lg"></i></button>
                 <button class="header__button hidden" id="photo"><h1 class="aside__div-button-h1">Photo</h1></button>
                 </div>
