--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
                     <label class="modal__form-div-label" for="username"><b>Username</b></label>
                     <input class="modal__form-div-input" type="text" placeholder="Enter Username" id="username" pattern="[a-z]{5,12}" required>
                     <button class="invalid-input hidden" id="invalidUsername">Username should contain 5 to 12 lowercase letters</button>
+                    <button class="invalid-input hidden" id="invalidLoginUsername">Please enter username</button>
                 </div>
                 <div class="modal__form-div-div">
                     <label class="modal__form-div-label" for="psw"><b>Password</b></label>
                     <input class="modal__form-div-input" type="password" placeholder="Enter Password" id="password" pattern="[A-Za-z0-9!?-]{8,12}" required>
-                    <button class="invalid-input hidden" id="invalidPassword">Password should contain 8 to 12 uppercase or lowercase letters, numbers and characters !?-</span>
-                    <button class="invalid-input hidden" id="invalidLoginPassword">Please enter correct password</span>
+                    <button class="invalid-input hidden" id="invalidPassword">Password should contain 8 to 12 uppercase or lowercase letters, numbers and characters !?-</button>
+                    <button class="invalid-input hidden" id="invalidLoginPassword">Please enter correct password</button>
                 </div>
                 <div class="clearfix">
                     <button type="button" class="btn cancelbtn" id="cancelbtn">Cancel</button>
