--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
         <section class="section" id="section"></section>
     </main>
     <script src="main.js"></script>
-    <script src="js/data.js"></script>
-    <script src="js/search.js"></script>
-    <script src="js/aside.js"></script>
-    <script src="js/logIn.js"></script>
-    <script src="js/logOut.js"></script>
+    <script src="assets/js/data.js"></script>
+    <script src="assets/js/search.js"></script>
+    <script src="assets/js/aside.js"></script>
+    <script src="assets/js/logIn.js"></script>
+    <script src="assets/js/logOut.js"></script>
 </body>
 </html>
